@startuml

package hal {
    interface PulseWidthModulation {
        +SetDuty(dutyPercent: uint8): void
        +SetPulse(pulseOn: uint32, period: uint32): void
        +Start(): void
        +Stop(): void
    }

    interface I2cMaster {
        +SendData(address: uint8, data: uint8[], nextAction, onSent: Function): void
        +ReceiveData(address: uint8, data: uint8[], nextAction, onReceived: Function): void
        +SetErrorPolicy(policy: I2cErrorPolicy&): void
        +ResetErrorPolicy(): void        
    }
}

struct Pca9685Message {
    +data: uint8[]
    +onSent: Function
}

class Pca9685 {
    -i2cMessageQueue: infra::BoundedDeque<Pca9685Message>
    -i2c: I2cMaster
    -address: uint8
    -frequency: uint16
    +Pca9685(i2c: I2cMaster, address: uint8, frequency: uint16)
    +GetChannel(channel: uint8): Pca9685Channel
    +SetFrequency(frequency: uint16): void
    +GetFrequency(): uint16
    +SetChannelPulseOn(channel: uint8, pulseOn: uint16): void
    -ProcessI2cMessageQueue(): void
}

class Pca9685Channel {
    -pca9685: Pca9685
    -channel: uint8
    +Pca9685Channel(pca9685: Pca9685, channel: uint8)
}

Pca9685 "1" *-- "16" Pca9685Channel
I2cMaster --> Pca9685
Pca9685Channel ..|> PulseWidthModulation
Pca9685 ..> Pca9685Message : queues

@enduml
